--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "react-icons": "^5.2.1",
         "react-paginate": "^8.2.0",
-        "swiper": "^11.1.4"
+        "swiper": "^11.1.4",
+        "ziggy-js": "^2.2.1"
     }
 }
